Add navbar color scheme

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
 body {
-  color: #E4E6C3;
-  background-color: #222725;
+  color: #37CE90;
+  background-color: #3A3B40;
+}
+
+.navbar-default {
+  border: none;
 }
 
 #container-location,
@@ -12,4 +16,76 @@ body {
 
 #container-icontemp {
   font-size: 15em;
+}
+
+/*Generated bootstrap navbar color scheme*/
+/*http://work.smarchal.com/twbscolor/*/
+.navbar-default {
+  background-color: #3a3b40;
+  border-color: #515259;
+}
+.navbar-default .navbar-brand {
+  color: #dededc;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #aaaaa9;
+}
+.navbar-default .navbar-text {
+  color: #dededc;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #dededc;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #aaaaa9;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #aaaaa9;
+  background-color: #515259;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #aaaaa9;
+  background-color: #515259;
+}
+.navbar-default .navbar-toggle {
+  border-color: #515259;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: #515259;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #dededc;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #dededc;
+}
+.navbar-default .navbar-link {
+  color: #dededc;
+}
+.navbar-default .navbar-link:hover {
+  color: #aaaaa9;
+}
+
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #dededc;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #aaaaa9;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #aaaaa9;
+    background-color: #515259;
+  }
 }
